app-part4/redis-master-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-master
  labels:
    application: hello-world-part4
    tier: backend
    component: redis-master
spec:
  selector:
    matchLabels:
      application: hello-world-part4
      tier: backend
      component: redis-master
      role: master
  replicas: 1
  template:
    metadata:
      labels:
        application: hello-world-part4
        tier: backend
        component: redis-master
        role: master
    spec:
      containers:
      - name: master
        #image: k8s.gcr.io/redis:e2e  # or just image: redis
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
