app-part4/redis-slave-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-slave
  labels:
    application: hello-part4
    tier: backend
    component: redis-slave
    role: slave
spec:
  selector:
    matchLabels:
      application: hello-part4
      tier: backend
      component: redis-slave
      role: slave
  replicas: 2
  template:
    metadata:
      labels:
        application: hello-part4
        tier: backend
        component: redis-slave
        role: slave
    spec:
      containers:
      - name: redis-slave
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
