app-part4/redis-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    application: hello-port4
    tier: backend
    component: redis-slave
    role: slave
spec:
  ports:
  - port: 6379
  selector:
    application: hello-port4
    tier: backend
    component: redis-slave
    role: slave
